fix horizontal scroll

--- a/src/sass/elements/_filter.scss
+++ b/src/sass/elements/_filter.scss
@@ -17,7 +17,10 @@
 .filter__list {
   max-height: 228px;
   width: 100%;
-  overflow: scroll;
+  // overflow: scroll;
+  //   width: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
   @media screen and (min-width: $tablet) {
     max-height: 472px;
   }
